[metadata]
name = Reading-from-Delphes
version = 0.1.0
url = https://github.com/BILPAware/FutureWMassAnalysis
description = Simple script to make plots using the ExRootAnalysis output from Delphes
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	    Programming Language :: Python :: 3
	    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	    Operating System :: OS Independent

[options]
packages =
	 analysis
install_requires =
	 kkconfig
	 kkroot>=0.0.2
